--- a/Web411019294/Views/Test/Index.cshtml
+++ b/Web411019294/Views/Test/Index.cshtml
@@ -11,19 +11,16 @@
     帳號:@Html.TextBox("account")<br/>
     密碼:@Html.Password("password")<br/>
     年齡:@Html.TextBox("age")<br/>
-    性別:@Html.RadioButton("gender","A")男生
-    @Html.RadioButton("gender","B")女生<br/>
-    興趣:<br/>@Html.CheckBox("swimming","A")游泳<br/>
-    @Html.CheckBox("sinning","B")唱歌<br/>
+    性別:@Html.RadioButton("gender", "A")男生
+    @Html.RadioButton("gender", "B")女生<br/>
+    興趣:<br/>@Html.CheckBox("swimming", "A")游泳<br/>
+    @Html.CheckBox("sinning", "B")唱歌<br/>
+    @Html.CheckBox("camping","C")露營<br/>
     關於我:@Html.TextArea("about")
-
-
-
-
-
-
-
-
-
     </div>
 }
+@{
+    var message = "你好";
+}
+<p>@message</p>
+<p>@DateTime.Now</p>
