--- a/Web411019294/Views/Test/Index.cshtml
+++ b/Web411019294/Views/Test/Index.cshtml
@@ -21,6 +21,15 @@
 }
 @{
     var message = "你好";
+    var isStudent = true;
 }
 <p>@message</p>
 <p>@DateTime.Now</p>
+@if (isStudent)
+{
+<p>是學生</p>
+}
+else
+{
+<p>不是學生</p>
+}
