--- a/Web411019294/Views/Students/Index.cshtml
+++ b/Web411019294/Views/Students/Index.cshtml
@@ -20,6 +20,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.IsActive)
+        </th>
         <th></th>
     </tr>
 
@@ -34,10 +37,13 @@
         <td>
             @Html.DisplayFor(modelItem => item.Email)
         </td>
+        <th>
+            @Html.DisplayFor(modelItem => item.IsActive)
+        </th>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edit", "Edit", new{id = item.Id}) |
+            @Html.ActionLink("Details", "Details", new{ id = item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.Id})
         </td>
     </tr>
 }
